# cuddly-octo-potato

./: .gitignore  README.md  main.py  pyproject.toml
app/: llm.py  prompts.py  vector_db.py
exp/: docling_new.ipynb  docling_test.py  img.py  test.py  test_compliance_check.ipynb  test_extraction.ipynb  test_final_evaluation.py  test_novelty_check.ipynb  testing_relevance.ipynb  text.py  tt.py
scripts/: cli_chat.py  create_vector_db.py  doc_extractor.py  evaluate_ragas.py  fill_eval.py
utils/: schema.py  utils.py
