[project]
name = "nexml-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.3.1",
    "chromadb>=1.3.5",
    "docling>=2.63.0",
    "fastapi>=0.121.2",
    "groq>=0.34.1",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-experimental>=0.4.0",
    "langchain-groq>=1.0.1",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.3",
    "python-multipart>=0.0.20",
    "semanticscholar>=0.11.0",
    "sentence-transformers>=5.1.2",
    "supermemory>=3.8.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "unstructured[local-inference]>=0.18.21",
]
